--- a/openWeather/app1/index.html
+++ b/openWeather/app1/index.html
@@ -11,6 +11,6 @@
 
     <h3>It would be great if there were results here somewhere</h3>
     
-    <script src = "script.js"></script>
+    <script src = "script2.js"></script>
 </body>
 </html>
